Added links to the footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1> Welcome to the weather App</h1>
-    <footer> Coded by Thandeka Moiloa</footer>
+    <footer> 
+        Coded by
+        <a href="https://github.com/Thandeka4"> Thandeka Moiloa </a>, Code hosted on <a href="https://github.com/Thandeka4/My-First-weather-App">GitHub</a> and website hosted on  <a href="https://peppy-pie-0dd2d4.netlify.app/">Netlify</a>
+    </footer>
 </body>
 </html>
