--- a/index.html
+++ b/index.html
@@ -6,10 +6,28 @@
     <title> Vanilla weather App</title>
 </head>
 <body>
-    <h1> Welcome to the weather App</h1>
+    <header>
+        <form >
+            <input type="search"  placeholder="Enter a City" required />
+            <input type="submmit" value="Search" />
+        </form>
+    </header>
+    <main>
+        <div>
+    <h1> Bloemfontein</h1>
+    <p>
+        Tuesday 14:49 , scattered clouds
+        <br />
+        Humidity: 66% , Wind: 13.3km/h
+    </p>
+</div>
+<div>
+    12
+</div>
+</main>
     <footer> 
-        Coded by
-        <a href="https://github.com/Thandeka4"> Thandeka Moiloa </a>, Code hosted on <a href="https://github.com/Thandeka4/My-First-weather-App">GitHub</a> and website hosted on  <a href="https://peppy-pie-0dd2d4.netlify.app/">Netlify</a>
+       This project was coded  Coded by
+        <a href="https://github.com/Thandeka4/" target="_blank"> Thandeka Moiloa </a>, Code hosted on <a href="https://github.com/Thandeka4/My-First-weather-App/" target="_blank">GitHub</a> and website hosted on  <a href="https://peppy-pie-0dd2d4.netlify.app/">Netlify</a>
     </footer>
 </body>
 </html>
