styled the main container and added two custom fonts

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=initial-scale=1.0">
+    <link rel="stylesheet" href="src/index.css" />
     <title> Vanilla weather App</title>
 </head>
 <body>
+    <div class="weather-app">
     <header>
         <form >
             <input type="search"  placeholder="Enter a City" required />
@@ -29,5 +31,6 @@
        This project was coded  Coded by
         <a href="https://github.com/Thandeka4/" target="_blank"> Thandeka Moiloa </a>, Code hosted on <a href="https://github.com/Thandeka4/My-First-weather-App/" target="_blank">GitHub</a> and website hosted on  <a href="https://peppy-pie-0dd2d4.netlify.app/">Netlify</a>
     </footer>
+</div>
 </body>
 </html>
