--- a/index.html
+++ b/index.html
@@ -9,22 +9,27 @@
 <body>
     <div class="weather-app">
     <header>
-        <form >
-            <input type="search"  placeholder="Enter a City" required />
-            <input type="submmit" value="Search" />
+        <form class="search-form" id="search-form">
+            <input type="search"  placeholder="Enter a City" required class="search-form-input" />
+            <input type="submmit" value="Search" class="search-form-button" />
         </form>
     </header>
     <main>
+        <div class="weather-app-data">
         <div>
-    <h1> Bloemfontein</h1>
-    <p>
+    <h1 class="weather-app-city"> Bloemfontein</h1>
+    <p class="weather-app-details">
         Tuesday 14:49 , scattered clouds
         <br />
-        Humidity: 66% , Wind: 13.3km/h
+        Humidity: <strong>66%</strong> , Wind: <strong>13.3km/h</strong>
     </p>
 </div>
-<div>
-    12
+<div class="weather-app-temperature-container">
+<div class="weather-app-temperature">
+    <div class="weather-app-icon">🌧</div>
+    <div class="weather-app-temperature">12</div>
+    <div class="weather-app-units"> C</div>
+</div>
 </div>
 </main>
     <footer> 
@@ -32,5 +37,6 @@
         <a href="https://github.com/Thandeka4/" target="_blank"> Thandeka Moiloa </a>, Code hosted on <a href="https://github.com/Thandeka4/My-First-weather-App/" target="_blank">GitHub</a> and website hosted on  <a href="https://peppy-pie-0dd2d4.netlify.app/">Netlify</a>
     </footer>
 </div>
+<script src="src/index.js"></script>
 </body>
 </html>
