--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <div class="weather-app">
     <header>
         <form class="search-form" id="search-form">
-            <input type="search"  placeholder="Enter a City" required class="search-form-input" />
+            <input type="search"  placeholder="Enter a City" required  id="search-form-input" class="search-form-input" />
             <input type="submmit" value="Search" class="search-form-button" />
         </form>
     </header>
     <main>
         <div class="weather-app-data">
         <div>
-    <h1 class="weather-app-city"> Bloemfontein</h1>
+    <h1 class="weather-app-city" id="city"> Bloemfontein</h1>
     <p class="weather-app-details">
         Tuesday 14:49 , scattered clouds
         <br />
